# advent_of_code

./: .envrc  .gitignore  Pipfile  README.md  advent_of_code.code-workspace  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  sanity_check.sh
.github/workflows/: pythonapp.yml
.zed/: debug.json  settings.json
2018/day_1/: puzzle1_question.md  puzzle2_question.md
2018/day_1/puzzle_1/: question.md  simple_input.txt
2018/day_1/puzzle_2/: question.md
2018/day_1/python/: day1_puzzle1.py  day1_puzzle2.py  test_day1_puzzle1.py  test_day1_puzzle2.py  (+2 more)
2018/day_2/: puzzle1_question.md  simple_input_part2_copy.txt
2018/day_3/: puzzle1_question.md
aoc_2015/day_1/: puzzle_question.md
aoc_2018/day_1/: puzzle_question.md
aoc_2018/day_11/: README.md
aoc_2018/day_13/: README.md
aoc_2018/day_14/: README.md
aoc_2018/day_2/: puzzle2_question.md
aoc_2018/day_3/: puzzle1_approaches.md  puzzle2_question.md
aoc_2018/day_5/: puzzle_question.md
aoc_2018/day_6/: puzzle_question.md
aoc_2018/day_7/: README.md
aoc_2018/rust/: Cargo.toml
aoc_2018/rust/src/: config.rs
aoc_2018/rust/src/day1/: main.rs
aoc_2018/rust/src/day2/: main.rs
aoc_2018/rust/src/day3/: main.rs
aoc_2018/rust/src/day4/: main.rs
aoc_2018/rust/src/day5/: main.rs
aoc_2021/day_1/: README.md
aoc_2021/day_13/: README.md
aoc_2021/day_21/: README.md
aoc_2021/day_23/: README.md
aoc_2021/day_3/: README.md
aoc_2025/: README.md
aoc_2025/day_01/: codon_impl.py  main.py  mypyc_impl.py  numba_impl.py
aoc_2025/day_02/: main.py
src/aoc_2022/: README.md
src/aoc_2023/: README.md
(+195 files in other folders)
